--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -13,7 +13,7 @@
 			{% for image in images %}
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="{{ image.url }}"
-                   data-fresco-caption="{{ image.caption }} ({{ image.date }})"
+                   data-fresco-caption="{{ image.caption }} ({{ image.date_str }})"
                    data-fresco-group="gallery">
 					<img src="{{ image.url }}" alt="">
 				</a>
