--- a/templates/sobre_mi.html
+++ b/templates/sobre_mi.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block main_content %}
-<div class="container">
+<div class=" mb-5 container">
     <div class="row">
         <div class="col-lg-4">
             <h3 class="mb-2 text-white">Sobre mí</h3>
-            <p>Hola! Soy <b>José Miguel Cordero</b>, estudiante de ingeniería en computación del
-                <a class="pinky" href="https://www.dcc.uchile.cl/">DCC</a>. Por aquí subo principalmente fotos.</p>
+            <p>Hola! Soy <b>José Miguel Cordero</b>. Vivo en Santiago de Chile, tengo 24 años y soy estudiante de
+                ingeniería en computación del <a class="pinky" href="https://www.dcc.uchile.cl/">DCC</a>.
+                Me interesa la fotografia, el análisis de datos y la discusión política.</p>
             <i class="far fa-envelope mr-1"></i>
             <a href="#" class="cryptedmail pinky"
                data-name="jcordero"
