--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-    <title>{{ title }}</title>
+    <title>{{ title }} - JM</title>
     <meta charset="UTF-8">
     <meta name="description" content="José Miguel Cordero">
     <meta name="keywords" content="photo, chile">
@@ -65,7 +65,7 @@
                         Fotos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="./estallido.html">Estado de excepción (Santiago de Chile, 2019)</a>
+                        <a class="dropdown-item" href="./estallido.html">Estado de excepción (Santiago, 2019)</a>
                         <a class="dropdown-item" href="#">Neón (pŕoximamente)</a>
 <!--                        <div class="dropdown-divider"></div>-->
 <!--                        <a class="dropdown-item" href="#">Foto aleatoria (próximamente)</a>-->
